Agregados todos los productos

--- a/site/index.html
+++ b/site/index.html
@@ -92,7 +92,8 @@
 								<div class="content">
 									<img src="images/nance.jpeg" alt="" width="154" height="323">
 									<h3>Marañón</h3>
-									<p>Del marañón hacemos uso del seudofruto este tiene un sabor astringente y al
+									<p>
+										Del marañón hacemos uso del seudofruto, este tiene un sabor astringente y al
 										mismo tiempo ácido, pero cuando se maneja el nivel adecuado de azúcar y con
 										el tiempo de fermentación correcto, se convierte en uno de nuestros vinos
 										exquisitos por la explosión de sabor y olor al verterlo en la copa y degustarlo.
@@ -125,10 +126,209 @@
 										un año se convierte en uno de los vinos más exquisitos y favoritos. 
 									</p>
 									<ul>
-										<p class="p2">"Agridulce para mi boquita
-											Delicioso mamoncillo.
-											Tus bolitas en mi boca
+										<p class="p2">
+											"Agridulce para mi boquita<br>
+											Delicioso mamoncillo.<br>
+											Tus bolitas en mi boca<br>
 											Jugosito, rico vino"
+										</p>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Carambola</h3>
+									<p>
+										La Carambola conocida como fruta estrella o averrhoa, por ser altamente jugosa,
+										con poca fibra y ácida, hace que quienes degustan el vino se sientan seducidas
+										por el sabor ya que es uno de nuestros vinos más suaves y poco dulces.
+									</p>
+									<ul>
+										<li class="p2"><span>C</span>aminos que recorrer</li>
+										<li class="p2"><span>A</span>migos que recordar</li>
+										<li class="p2"><span>R</span>azones para disfrutar</li>
+										<li class="p2"><span>A</span>rdiente tu color y textura,</li>
+										<li class="p2"><span>M</span>ás tu belleza sin igual</li>
+										<li class="p2"><span>B</span>endición de mi tierra,</li>
+										<li class="p2"><span>O </span>estrella jugosa</li>
+										<li class="p2"><span>L</span>uz de mi paladar</li>
+										<li class="p2"><span>A</span>mores de nunca olvidar</li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Licha</h3>
+									<p>
+										La Licha o Mamón chino, Rambután o Achotillo fruta tropical exótica, su pulpa
+										jugosa y sabor dulce hace que nuestro Vino de Licha tenga un intenso sabor y
+										preserve el aroma del fruto. 
+									</p>
+									<ul>
+										<li class="p2"><span>L</span>o tienes todo</li>
+										<li class="p2"><span>I</span>gual tu color y corazón</li>
+										<li class="p2"><span>Ch</span>elita por fuera</li>
+										<li class="p2"><span>A</span>morosa por dentro</li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Mora</h3>
+									<p>
+										La mora un pequeño fruto compuesto por varias drupas, que después del proceso de fermentación adquiere una fragancia exquisita y un sabor estupendo donde se mantiene la esencia del fruto. Convirtiéndose así en un vino semidulce dispuesto a complacer paladares exigentes. 
+									</p>
+									<ul>
+										<li class="p2"><span>M</span>uchos te desean, así de chiquitita</li>
+										<li class="p2"><span>O</span>h diminuta fruta, de sabor sin igual</li>
+										<li class="p2"><span>R</span>ica cuando te añejas, para</li>
+										<li class="p2"><span>A</span>manecer juntitos, en un lugar especial</li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Mandarina</h3>
+									<p>
+										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
+									</p>
+									<ul>
+										<li class="p2"><span>M</span>i vitamina te</li>
+										<li class="p2"><span>A</span>mplia la visión,</li>
+										<li class="p2"><span>N</span>ada es mejor que</li>
+										<li class="p2"><span>D</span>esear mi sabor</li>
+										<li class="p2"><span>A</span> todos les gusto por</li>
+										<li class="p2"><span>R</span>ica y jugosa</li>
+										<li class="p2"><span>I</span>nigualable color,</li>
+										<li class="p2"><span>N</span>unca me olvides porque</li>
+										<li class="p2"><span>A</span>naranjadita siempre soy.</li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Mandariovos</h3>
+									<p>
+										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
+									</p>
+									<ul>
+										<li class="p2"><span>M</span>ezcla perfecta</li>
+										<li class="p2"><span>A</span>mor</li>
+										<li class="p2"><span>N</span>obleza y </li>
+										<li class="p2"><span>D</span>eseo,</li>
+										<li class="p2"><span>A</span>legría tu atributo</li>
+										<li class="p2"><span>R</span>iqueza de sentimientos</li>
+										<li class="p2"><span>I</span>nolvidable tu ser </li>
+										<li class="p2"><span>O</span>h, sabores frutales</li>
+										<li class="p2"><span>V</span>ida en cada copa</li>
+										<li class="p2"><span>O</span>h, brindis de emoción</li>
+										<li class="p2">¡<span>S</span>abor! Mi pasión. </li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Carambolapiña</h3>
+									<p>
+										La Carambola conocida como fruta estrella o averrhoa este al mezclarlo con la
+										Piña solidifican su sabor, textura y aroma surgiendo un vino dulce, pero con la
+										llama explosiva en cada copa que degustas.
+									</p>
+									<ul>
+										<p class="p2">
+											¡Caramba! Que sabor,<br>
+											De la carambolapiña<br>
+											De premio merece la estrella<br>
+											Y mi cuerpo la botella.
+										</p>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Mora</h3>
+									<p>
+										La mora un pequeño fruto compuesto por varias drupas, que después del proceso de fermentación adquiere una fragancia exquisita y un sabor estupendo donde se mantiene la esencia del fruto. Convirtiéndose así en un vino semidulce dispuesto a complacer paladares exigentes. 
+									</p>
+									<ul>
+										<li class="p2"><span>M</span>oradita y nutritiva</li>
+										<li class="p2"><span>O</span>h, fruto particular</li>
+										<li class="p2"><span>R</span>ica en Vino</li>
+										<li class="p2"><span>A</span>cidita, sabrosa, especial</li>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Maracuyambola</h3>
+									<p>
+										El Maracuyá, conocida también como granadilla al mezclar con la Carambola
+										conocida como fruta estrella o averrhoa, se fusionan haciendo un detonante de
+										sabor exquisito entre lo ácido y lo dulce. Sin duda que llamar al Maracuyá como
+										fruta de la pasión hace que este vino sea el vino de la energía. 
+									</p>
+									<ul>
+										<p class="p2">
+											Sos un mar de sabor<br>
+											Maracuyambola…<br>
+											La mezcla hace la<br>
+											Explosión, el Vino<br>
+											Mi pasión…
+										</p>
+									</ul>
+									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/nance.jpeg" alt="" width="154" height="323">
+									<h3>Tamarindo</h3>
+									<p>
+										El tamarindo o dátil de la India, la detonación de sabor que tiene el fruto al
+										convertirlo en vino, fermentado por más de dos años hace que sea uno de
+										nuestro Vinos con esencia tropical, rico para refrescar. Una delicia para
+										introducirse a la generosidad que tiene la crianza del Vino de Tamarindo.
+									</p>
+									<ul>
+										<p class="p2">
+											De las cosas que me han pasado<br>
+											Probarte es la mejor<br>
+											Disfrutarte poco a poco<br>
+											Tamarindo, sí señor.
 										</p>
 									</ul>
 									<div class="alright"><a href="#" class="btn">Productos</a></div>
