--- a/site/index.html
+++ b/site/index.html
@@ -42,10 +42,9 @@
 							<div class="clear"></div>
 						</form>
 						<div class="socials">
-							<a href="#"></a>
-							<a href="#"></a>
-							<a href="#"></a>
-							<a href="#"></a>
+							<a href="https://www.instagram.com/vinosartesanales_mimadre" target="_blank"></a>
+							<a href="https://www.facebook.com/profile.php?id=100064104907303&mibextid=ZbWKwL" target="_blank"></a>
+							<a href="https://wa.me/50499446104" target="_blank"></a>
 						</div>
 						<nav class="">
 							<ul class="sf-menu">
@@ -63,10 +62,10 @@
 				</div>
 			</div>
 		</header>
-		<div id="TMGPrototype2"><div class="ic">More Website Templates @ TemplateMonster.com - September 23, 2013!</div>
+		<div id="TMGPrototype2">
 			<h1><a href="index.html"><img src="images/logo_nerak_razan.jpeg" alt="logo_nerak_razan"></a></h1>
 			<ul class='sets'>
-				<li data-setName="Red Wine">
+				<li data-setName="Vinos">
 					<ul>
 						<li data-srcPreview="images/vinos_todos.jpg">
 							<div>
@@ -337,7 +336,7 @@
 						</li>
 					</ul>
 				</li>
-				<li data-setName="White Wine">
+				<li data-setName="Mermeladas">
 					<ul>
 						<li data-srcPreview="images/white1.jpg">
 							<div>
@@ -398,7 +397,7 @@
 						</li>
 					</ul>
 				</li>
-				<li data-setName="Sparkling Wine">
+				<li data-setName="Otros">
 					<ul>
 						<li data-srcPreview="images/spark1.jpg">
 							<div>
