Agregadas las imagenes de fondo a la pagina de productos

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -97,7 +97,7 @@
 						<p>
 							Actualmente Vinos Artesanales ¡Mi Madre! Tiene 11 sabores disponibles entre ellos; Mamón, Licha, Carambola, Marañón, Nance, Tamarindo, Piña, Carambolapiña, Maracuyambola, Mandarina, Mandariovos, Mora teniendo como meta lanzar entre diciembre y marzo 2022 el sabor Nance. De nuestra gama de sabores decidimos enviar cuatro de los sabores de mayor consumo en nuestra zona. Sin tener a menos el sabor exquisito que tienen los demás.
 						</p>
-						<div class="alright"><a href="#" class="btn">Inicio</a></div>
+						<div class="alright"><a href="index.html" class="btn">Productos</a></div>
 					</div>
 				</div>
 				<div class="grid_3">
