--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Our Wines</title>
+		<title>Productos</title>
 		<link rel="icon" href="images/favicon.ico">
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" href="css/style.css">
@@ -70,8 +70,8 @@
 						<li data-srcPreview="images/vinos_todos.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Vino de nance</h3>
+									<img src="images/bot_nance.jpeg" alt="vino de nance">
+									<h3>Vino de Nance</h3>
 									<p>El Nance una fruta diminuta y amarillenta, también conocida como changunga,
 										de sabor ácido y aroma fuerte, se convierte en un vino perfecto que refresca el
 										paladar a gusto</p>
@@ -86,11 +86,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/copas_todos.jpg">
+						<li data-srcPreview="images/mom_column_2.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Marañón</h3>
+									<img src="images/bot_maranon.jpeg" alt="vino de marañon">
+									<h3>Vino de Marañón</h3>
 									<p>
 										Del marañón hacemos uso del seudofruto, este tiene un sabor astringente y al
 										mismo tiempo ácido, pero cuando se maneja el nivel adecuado de azúcar y con
@@ -115,11 +115,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/copas_todos.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Mamón</h3>
+									<img src="images/bot_maranon.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Mamón</h3>
 									<p>El mamón, mamoncillo o quenepa, fruto exótico que con su sabor semiácido y su
 										pulpa traslucida que al complementarlo con el azúcar y reservando por más de
 										un año se convierte en uno de los vinos más exquisitos y favoritos. 
@@ -136,11 +136,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/girl_cup_1x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Carambola</h3>
+									<img src="images/bot_nance.jpeg" alt="">
+									<h3>Vino de Carambola</h3>
 									<p>
 										La Carambola conocida como fruta estrella o averrhoa, por ser altamente jugosa,
 										con poca fibra y ácida, hace que quienes degustan el vino se sientan seducidas
@@ -161,11 +161,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/bottles_cubo_1.jpeg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Licha</h3>
+									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Licha</h3>
 									<p>
 										La Licha o Mamón chino, Rambután o Achotillo fruta tropical exótica, su pulpa
 										jugosa y sabor dulce hace que nuestro Vino de Licha tenga un intenso sabor y
@@ -181,11 +181,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/girl_box_near_x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Mora</h3>
+									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Mora</h3>
 									<p>
 										La mora un pequeño fruto compuesto por varias drupas, que después del proceso de fermentación adquiere una fragancia exquisita y un sabor estupendo donde se mantiene la esencia del fruto. Convirtiéndose así en un vino semidulce dispuesto a complacer paladares exigentes. 
 									</p>
@@ -202,8 +202,8 @@
 						<li data-srcPreview="images/old_bottles.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Mandarina</h3>
+									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Mandarina</h3>
 									<p>
 										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
 									</p>
@@ -222,11 +222,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/mom_show_x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Mandariovos</h3>
+									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Mandariovos</h3>
 									<p>
 										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
 									</p>
@@ -247,11 +247,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/vino_dia_comparte_smile.jpeg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Carambolapiña</h3>
+									<img src="images/bot_nance.jpeg" alt="">
+									<h3>Vino de Carambolapiña</h3>
 									<p>
 										La Carambola conocida como fruta estrella o averrhoa este al mezclarlo con la
 										Piña solidifican su sabor, textura y aroma surgiendo un vino dulce, pero con la
@@ -269,11 +269,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/girl_cup_bottle_1x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Mora</h3>
+									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
+									<h3>Vino de Mora</h3>
 									<p>
 										La mora un pequeño fruto compuesto por varias drupas, que después del proceso de fermentación adquiere una fragancia exquisita y un sabor estupendo donde se mantiene la esencia del fruto. Convirtiéndose así en un vino semidulce dispuesto a complacer paladares exigentes. 
 									</p>
@@ -290,8 +290,8 @@
 						<li data-srcPreview="images/old_bottles.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Maracuyambola</h3>
+									<img src="images/bot_maracuyambola.jpeg">
+									<h3>Vino de Maracuyambola</h3>
 									<p>
 										El Maracuyá, conocida también como granadilla al mezclar con la Carambola
 										conocida como fruta estrella o averrhoa, se fusionan haciendo un detonante de
@@ -311,11 +311,11 @@
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/mom_drink_x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/nance.jpeg" alt="" width="154" height="323">
-									<h3>Tamarindo</h3>
+									<img src="images/bot_tamarindo.jpeg" alt="vino de tamarindo">
+									<h3>Vino de Tamarindo</h3>
 									<p>
 										El tamarindo o dátil de la India, la detonación de sabor que tiene el fruto al
 										convertirlo en vino, fermentado por más de dos años hace que sea uno de
