Agregados nuevos productos e imagenes

--- a/site/index.html
+++ b/site/index.html
@@ -82,7 +82,6 @@
 										<li class="p2"><span>C</span>on tu dulce sabor</li>
 										<li class="p2"><span>E</span>l vino eterno, razón de mi ser.</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -111,7 +110,6 @@
 											Mi delicioso Marañon"
 										</p>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -132,7 +130,6 @@
 											Jugosito, rico vino"
 										</p>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -157,7 +154,6 @@
 										<li class="p2"><span>L</span>uz de mi paladar</li>
 										<li class="p2"><span>A</span>mores de nunca olvidar</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -177,7 +173,6 @@
 										<li class="p2"><span>Ch</span>elita por fuera</li>
 										<li class="p2"><span>A</span>morosa por dentro</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -195,7 +190,6 @@
 										<li class="p2"><span>R</span>ica cuando te añejas, para</li>
 										<li class="p2"><span>A</span>manecer juntitos, en un lugar especial</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -218,7 +212,6 @@
 										<li class="p2"><span>N</span>unca me olvides porque</li>
 										<li class="p2"><span>A</span>naranjadita siempre soy.</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -243,7 +236,6 @@
 										<li class="p2"><span>O</span>h, brindis de emoción</li>
 										<li class="p2">¡<span>S</span>abor! Mi pasión. </li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -265,7 +257,6 @@
 											Y mi cuerpo la botella.
 										</p>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
@@ -283,11 +274,10 @@
 										<li class="p2"><span>R</span>ica en Vino</li>
 										<li class="p2"><span>A</span>cidita, sabrosa, especial</li>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/old_bottles.jpg">
+						<li data-srcPreview="images/girl_cup_2_x.png">
 							<div>
 								<div class="content">
 									<img src="images/bot_maracuyambola.jpeg">
@@ -330,110 +320,112 @@
 											Tamarindo, sí señor.
 										</p>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
 								</div>
 							</div>
 						</li>
 					</ul>
 				</li>
-				<li data-setName="Mermeladas">
+				<li data-setName="Tablas de queso">
 					<ul>
-						<li data-srcPreview="images/white1.jpg">
+						<li data-srcPreview="images/vino_dia_comparte_smile.jpeg">
 							<div>
 								<div class="content">
-									<img src="images/white_wine.jpg" alt="">
-									<h3>Chardonnay</h3>
-									<p>Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcper fermentum. In vitae augue, eu. </p>
-									<p> Etiam dui eros, laoreet sit amet est velewyl commodo venenatis eros. Fusce adipiscing quam id risus sagittis, non lacus interdum.</p>
-									<ul>
-										<li><span>Variety:</span> Mivamus magna</li>
-										<li><span>Alcohol:</span> Quisque viverra</li>
-										<li><span>Length/Type of Aging: </span> Etiam dui</li>
-										<li><span>Oak Types: </span> Phasellus accumsan</li>
-										<li><span>Bottling Date: </span> Cras facilisis</li>
-										<li><span>Number of Cases:</span> Aliquam nibh</li>
-									</ul>
-									<div class="alright"><a href="#" class="btn">Read More</a></div>
+									<img src="images/tabla_1_x.png" alt="">
+									<h3>Tabla de quesos 1</h3>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi a autem. Culpa, autem ab. Iusto itaque voluptatem eius est magnam, ratione, quo possimus totam mollitia qui nobis, dolores dolorum?</p>
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/white2.jpg">
+						<li data-srcPreview="images/girl_box_near_x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/white_wine.jpg" alt="">
-									<h3>Sauvignon Blanc</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia impedit possimus architecto repellat enim velit alias quis</p>
-									<p> harum veritatis. Autem quaerat obcaecati quos corporis quasi voluptatum dolores velit laboriosam.</p>
-									<ul>
-										<li><span>Variety:</span> Mivamus magna</li>
-										<li><span>Alcohol:</span> Quisque viverra</li>
-										<li><span>Length/Type of Aging: </span> Etiam dui</li>
-										<li><span>Oak Types: </span> Phasellus accumsan</li>
-										<li><span>Bottling Date: </span> Cras facilisis</li>
-										<li><span>Number of Cases:</span> Aliquam nibh</li>
-									</ul>
-									<div class="alright"><a href="#" class="btn">Read More</a></div>
+									<img src="images/tabla_2_x.png" alt="">
+									<h3>Tabla de quesos 2</h3>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p>
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/white3.jpg">
+						<li data-srcPreview="images/girl_cup_2_x.png">
 							<div>
 								<div class="content">
-									<h3>Moscato</h3>
-									<img src="images/white_wine.jpg" alt="">
-									<p>Duis massa elit, auctor non pellentesque vel, aliquet sit der amet erat. Nullam eget dignissim nisi, aliquam feugiat nibh. </p>
-									<p>Ut nisi nibh, sagittis ut semper fertilom elementum, pellentesque a odio. Phasellus vitae libero vel justo pretium dignissim. </p>
-									<ul>
-										<li><span>Variety:</span> Mivamus magna</li>
-										<li><span>Alcohol:</span> Quisque viverra</li>
-										<li><span>Length/Type of Aging: </span> Etiam dui</li>
-										<li><span>Oak Types: </span> Phasellus accumsan</li>
-										<li><span>Bottling Date: </span> Cras facilisis</li>
-										<li><span>Number of Cases:</span> Aliquam nibh</li>
-									</ul>
-									<div class="alright"><a href="#" class="btn">Read More</a></div>
+									<img src="images/tabla_3_x.png" alt="">
+									<h3>Tabla de quesos 3</h3>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p>
+									<!--<div class="alright"><a href="#" class="btn">Productos</a></div> boton eliminado--> 
 								</div>
 							</div>
 						</li>
 					</ul>
 				</li>
-				<li data-setName="Otros">
+				<li data-setName="Cajas">
+					<ul>
+						<li data-srcPreview="images/girl_box_far_x.png">
+							<div>
+								<div class="content">
+									<img src="images/canasta_nostalgia_x.png" alt="">
+									<h3>Canasta nostálgica</h3>
+									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita vel exercitationem dolores iste asperiores minus perspiciatis magnam, corporis, quos tenetur quisquam quod dolorum iusto delectus reiciendis voluptatem nostrum at suscipit ratione. Praesentium animi ullam architecto dolor, hic ipsum eveniet? Earum?</p>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/bottles_cubo_1.jpeg">
+							<div>
+								<div class="content">
+									<img src="images/caja_porta_1_x.png" alt="">
+									<h3>Caja portavinos 1</h3>
+									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis optio voluptatum, rerum reiciendis maiores quasi, aut consectetur, officiis temporibus unde maxime fugiat corrupti doloribus velit ad cupiditate eveniet. Tenetur placeat culpa ex necessitatibus ipsum architecto sapiente aliquam ipsa odio temporibus..</p>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/vinos_todos.jpg">
+							<div>
+								<div class="content">
+									<img src="images/caja_porta_2_x.png" alt="">
+									<h3>Caja portavinos 2</h3>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo magni ab inventore, voluptatibus vero quia nemo enim animi, maxime dolorum in! Recusandae minima in ipsam quam officiis suscipit architecto, ullam natus consectetur, incidunt assumenda nobis ex porro eaque. Facilis, qui?</p>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/old_bottles.jpg">
+							<div>
+								<div class="content">
+									<img src="images/caja_porta_3_x.png" alt="">
+									<h3>Caja portavinos 3</h3>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto recusandae aliquam eveniet incidunt tenetur, modi odio porro est praesentium ad perspiciatis doloribus qui dolorem adipisci! Possimus corrupti facilis aliquam nostrum quis culpa quibusdam minima, illo laudantium, officia nisi ea delectus!</p>
+								</div>
+							</div>
+						</li>
+						<li data-srcPreview="images/copas_todos.jpg">
+							<div>
+								<div class="content">
+									<img src="images/caja_porta_4_x.png" alt="">
+									<h3>Caja portavinos 4</h3>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ad eaque! Reprehenderit corporis molestiae accusantium? Nisi sed temporibus eaque consequatur voluptas deserunt illum vitae nemo ipsa nostrum, eligendi, ullam molestias numquam ea maxime expedita voluptatem minus. Minima dolores maiores qui!</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li data-setName="Restaurante">
 					<ul>
 						<li data-srcPreview="images/spark1.jpg">
 							<div>
 								<div class="content">
-									<img src="images/sparkl_wine.jpg" alt="">
-									<h3>Astri</h3>
-									<p>Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcper fermentum. In vitae augue, eu. </p>
-									<p>Etiam dui eros, laoreet sit amet est velewyl commodo venenatis eros. Fusce adipiscing quam id risus sagittis, non lacus interdum.</p>
-									<ul>
-										<li><span>Variety:</span> Mivamus magna</li>
-										<li><span>Alcohol:</span> Quisque viverra</li>
-										<li><span>Length/Type of Aging: </span> Etiam dui</li>
-										<li><span>Oak Types: </span> Phasellus accumsan</li>
-										<li><span>Bottling Date: </span> Cras facilisis</li>
-										<li><span>Number of Cases:</span> Aliquam nibh</li>
-									</ul>
-									<div class="alright"><a href="#" class="btn">Read More</a></div>
+									<img src="images/menu_1.jpeg" alt="">
+									<h3>Bocadillos y Dulces</h3>
+									<p>
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus fuga minus, obcaecati, alias ad ea iste, consectetur distinctio autem eos debitis eligendi tempore! Laudantium, inventore error praesentium nulla, molestiae deleniti, iste ullam soluta nisi dolores earum minima a accusamus quo.
+									</p>
 								</div>
 							</div>
 						</li>
-						<li data-srcPreview="images/spark2.jpg">
+						<li data-srcPreview="images/spark1.jpg">
 							<div>
 								<div class="content">
-									<img src="images/sparkl_wine.jpg" alt="">
-									<h3>Prosecco</h3>
+									<img src="images/menu_2.jpeg" alt="">
+									<h3>Desayunos</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia impedit possimus architecto repellat enim velit alias quis</p>
 									<p> harum veritatis. Autem quaerat obcaecati quos corporis quasi voluptatum dolores velit laboriosam.</p>
-									<ul>
-										<li><span>Variety:</span> Mivamus magna</li>
-										<li><span>Alcohol:</span> Quisque viverra</li>
-										<li><span>Length/Type of Aging: </span> Etiam dui</li>
-										<li><span>Oak Types: </span> Phasellus accumsan</li>
-										<li><span>Bottling Date: </span> Cras facilisis</li>
-										<li><span>Number of Cases:</span> Aliquam nibh</li>
-									</ul>
-									<div class="alright"><a href="#" class="btn">Read More</a></div>
 								</div>
 							</div>
 						</li>
